--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn src src/index.ts"
-
+    "dev": "ts-node-dev --respawn src src/index.ts",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +19,20 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "@types/node": "^24.6.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.8.1",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2"
-  }
+    "typescript": "^5.9.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fode224/groupe4.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fode224/groupe4/issues"
+  },
+  "homepage": "https://github.com/fode224/groupe4#readme"
 }
