--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "dev": "ts-node-dev --respawn src src/index.ts",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "test:debug": "jest --detectOpenHandles"
+    "test:debug": "jest --detectOpenHandles",
+    "lint": "eslint . --ext .ts,.tsx,.mts,.cts",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "keywords": [],
   "author": "",
@@ -18,15 +21,21 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.5.2",
     "@types/supertest": "^6.0.3",
+    "eslint": "^9.38.0",
+    "globals": "^16.4.0",
     "jest": "^30.1.3",
+    "jiti": "^2.6.1",
+    "prettier": "3.6.2",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.46.1"
   }
 }
